--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -85,6 +85,18 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"බ්ලූටූත් සැකසීම් වෙනස් කිරීමට ඔබට අවසර නැත."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"නව උපාංගය යුගල කරන්න"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"බ්ලූටූත්"</string>
+    <!-- no translation found for bluetooth_pair_other_ear_dialog_title (3814943511999984012) -->
+    <skip />
+    <!-- no translation found for bluetooth_pair_other_ear_dialog_left_ear_message (7936892941892347102) -->
+    <skip />
+    <!-- no translation found for bluetooth_pair_other_ear_dialog_right_ear_message (8242208936062915941) -->
+    <skip />
+    <!-- no translation found for bluetooth_pair_other_ear_dialog_right_ear_positive_button (533612082529204078) -->
+    <skip />
+    <!-- no translation found for bluetooth_pair_other_ear_dialog_left_ear_positive_button (6500192653171220257) -->
+    <skip />
+    <!-- no translation found for bluetooth_screen_related (7976543255501825536) -->
+    <skip />
     <string name="bluetooth_is_visible_message" msgid="3811631869768157387">"බ්ලූටූත් සැකසීම් විවෘත කරන අතරතුර ආසන්න උපකරණ වලට <xliff:g id="DEVICE_NAME">%1$s</xliff:g> දර්ශනය වේ."</string>
     <string name="bluetooth_footer_mac_message" product="default" msgid="4782330594323261630">"දුරකථනයේ බ්ලූටූත් ලිපිනය: <xliff:g id="BLUETOOTH_MAC_ADDRESS">%1$s</xliff:g>"</string>
     <string name="bluetooth_footer_mac_message" product="tablet" msgid="1257226691967432025">"ටැබ්ලට් පරිගණකයේ බ්ලූටූත් ලිපිනය: <xliff:g id="BLUETOOTH_MAC_ADDRESS">%1$s</xliff:g>"</string>
@@ -142,16 +154,11 @@
     <string name="bluetooth_pref_summary" product="device" msgid="2192027516577675587">"ඔබගේ උපාංගයට අවට බ්ලූටූත් උපාංග සමඟ සන්නිවේදනයට ඉඩ දෙන්න"</string>
     <string name="bluetooth_pref_summary" product="default" msgid="768958961865499804">"ඔබගේ දුරකථනයට අවට බ්ලූටූත් උපාංග සමඟ සන්නිවේදනයට ඉඩ දෙන්න"</string>
     <string name="bluetooth_disable_a2dp_hw_offload" msgid="5942913792817797541">"බ්ලූටූත් A2DP දෘඪාංග ඕෆ්ලෝඩ් අබල කරන්න"</string>
-    <!-- no translation found for bluetooth_disable_le_audio_hw_offload (3966022676505972908) -->
-    <skip />
-    <!-- no translation found for bluetooth_disable_hw_offload_dialog_title (6001142380445276918) -->
-    <skip />
-    <!-- no translation found for bluetooth_disable_hw_offload_dialog_message (1524373895333698779) -->
-    <skip />
-    <!-- no translation found for bluetooth_disable_hw_offload_dialog_confirm (5594859658551707592) -->
-    <skip />
-    <!-- no translation found for bluetooth_disable_hw_offload_dialog_cancel (3663690305043973720) -->
-    <skip />
+    <string name="bluetooth_disable_le_audio_hw_offload" msgid="3966022676505972908">"බ්ලූටූත් LE AUDIO දෘඪාංග ඕෆ්ලෝඩ් අබල කරන්න"</string>
+    <string name="bluetooth_disable_hw_offload_dialog_title" msgid="6001142380445276918">"උපාංගය යළි අරඹන්නද?"</string>
+    <string name="bluetooth_disable_hw_offload_dialog_message" msgid="1524373895333698779">"මෙම සැකසීම වෙනස් කිරීමට ඔබ ඔබගේ උපාංගය යළි ඇරඹීමට අවශ්‍යයි."</string>
+    <string name="bluetooth_disable_hw_offload_dialog_confirm" msgid="5594859658551707592">"යළි අරඹන්න"</string>
+    <string name="bluetooth_disable_hw_offload_dialog_cancel" msgid="3663690305043973720">"අවලංගු කරන්න"</string>
     <string name="connected_device_media_device_title" msgid="3783388247594566734">"මාධ්‍ය උපාංග"</string>
     <string name="connected_device_call_device_title" msgid="88732390601723608">"ඇමතුම් උපාංග"</string>
     <string name="connected_device_other_device_title" msgid="4652120430615729193">"වෙනත් උපාංග"</string>
@@ -2314,6 +2321,14 @@
     <string name="accessibility_magnification_switch_shortcut_message" msgid="7718653917415163833">"ඔබගේ තිරයේ කොටසක් විශාලනය කිරීම සඳහා තුන්වරක් තට්ටු කිරීම භාවිතා කිරීම ටයිප් කිරීමේ සහ වෙනත් ප්‍රමාද සඳහා හේතු වේ.\n\nප්‍රවේශ්‍යතා බොත්තම අනෙක් යෙදුම්වලට උඩින් ඔබගේ තිරය මත පාවෙයි. විශාලනය කිරීමට එය තට්ටු කරන්න."</string>
     <string name="accessibility_magnification_switch_shortcut_positive_button" msgid="2446942190957296957">"ප්‍රවේශ්‍යතා බොත්තමට මාරු වන්න"</string>
     <string name="accessibility_magnification_switch_shortcut_negative_button" msgid="7115794462123071594">"තුන්වරක් තට්ටු කිරීම භාවිත කරන්න"</string>
+    <!-- no translation found for accessibility_magnification_triple_tap_warning_title (8484669851397296597) -->
+    <skip />
+    <!-- no translation found for accessibility_magnification_triple_tap_warning_message (2008671502848936410) -->
+    <skip />
+    <!-- no translation found for accessibility_magnification_triple_tap_warning_positive_button (8712304035901450010) -->
+    <skip />
+    <!-- no translation found for accessibility_magnification_triple_tap_warning_negative_button (2028849736366584733) -->
+    <skip />
     <string name="accessibility_magnification_service_settings_title" msgid="3531350704632316017">"විශාලන සැකසීම්"</string>
     <string name="accessibility_screen_magnification_gestures_title" msgid="3121714118381882167">"තට්ටු-තුනක් සමඟ විශාලනය කරන්න"</string>
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"කෙටිමඟ සමඟ විශාලන කරන්න"</string>
@@ -2321,10 +2336,24 @@
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"<xliff:g id="SERVICE">%1$s</xliff:g> පිළිබඳ"</string>
     <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"සංදර්ශන තරම සහ පෙළ"</string>
     <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"පෙළ සංදර්ශනය වන ආකාරය වෙනස් කරන්න"</string>
-    <string name="accessibility_text_reading_preview_mail_subject" msgid="8410011779056611430">"ඉ-තැපෑල: කාල යන්ත්‍රය සඳහා සැලසුම්, v2"</string>
-    <string name="accessibility_text_reading_preview_mail_from" msgid="8008010238385973504">"වෙතින්: bill@email.com"</string>
-    <string name="accessibility_text_reading_preview_mail_content" msgid="2845972588748160509">"සුබ උදෑසනක්! අපගේ අවසාන සංවාදය පසුවිපරම් කරමින්, මම ඔබගේ කාල යන්ත්‍ර සංවර්ධන සැලැස්මේ ප්‍රගතිය පරීක්ෂා කිරීමට කැමැත්තෙමි. ඔබට මෙම වසරේ E3 හි ආදර්ශනය කිරීමට මූලාකෘතියක් සූදානම් කර ගැනීමට හැකි වනු ඇතිද?"</string>
-    <string name="accessibility_text_reading_reset_button_title" msgid="8951212362359229102">"යළි සකසන්න"</string>
+    <!-- no translation found for accessibility_text_reading_preview_mail_subject (4597374768612733616) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_from (1797499780365288020) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_preview_mail_content (8078152365771951802) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_reset_button_title (5960753279788187669) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_confirm_dialog_title (2865331351355690389) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_confirm_dialog_message (517090197003540264) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_confirm_dialog_reset_button (8215800137850243736) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_conversation_message_1 (7883952203831957831) -->
+    <skip />
+    <!-- no translation found for accessibility_text_reading_conversation_message_2 (8112160435318635856) -->
+    <skip />
     <string name="accessibility_screen_option" msgid="8465307075278878145">"විකල්ප"</string>
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"තිරය මත විශාලනය කරන්න"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"විශාලනය කිරීමට 3 වරක් තට්ටු කරන්න"</string>
@@ -2381,9 +2410,8 @@
     <string name="accessibility_button_gesture_footer_learn_more_content_description" msgid="4144803517680297869">"ප්‍රවේශ්‍යතා බොත්තම &amp; ඉංගිතය ගැන තව දැන ගන්න"</string>
     <string name="accessibility_button_intro" msgid="2601976470525277903">"ප්‍රවේශ්‍යතා බොත්තම භාවිත කිරීම. ඉංගිතය 3-බොත්තම් සංචාලනය සමඟ ලබා ගත නොහැකිය."</string>
     <string name="accessibility_button_summary" msgid="8510939012631455831">"ප්‍රවේශ්‍යතා විශේෂාංගවලට ඉක්මනින් ප්‍රවේශ වන්න"</string>
-    <!-- no translation found for accessibility_button_gesture_description (7507097717493960397) -->
-    <skip />
-    <!-- no translation found for accessibility_button_description (3052248616240648249) -->
+    <string name="accessibility_button_gesture_description" msgid="7507097717493960397"><b>"ආරම්භ කිරීමට"</b>\n"1. ප්‍රවේශ්‍යතා සැකසීම් වෙත යන්න\n2. විශේෂාංගයක් තෝරන්න සහ කෙටිමඟ තට්ටු කරන්න\n3. ඔබට විශේෂාංගයට ප්‍රවේශ වීමට බොත්තමක් හෝ ඉංගිතය යන දෙකින් භාවිත කිරීමට අවශ්‍යද යන්න තෝරන්න"</string>
+    <!-- no translation found for accessibility_button_description (1261273371298608222) -->
     <skip />
     <string name="accessibility_button_or_gesture_title" msgid="3510075963401163529">"බොත්තම හෝ ඉංගිතය භාවිත කරන්න"</string>
     <string name="accessibility_button_location_title" msgid="7182107846092304942">"ස්ථානය"</string>
@@ -2488,8 +2516,19 @@
     <string name="accessibility_hearingaid_title" msgid="427173678199203191">"ශ්‍රවණාධාරක"</string>
     <string name="accessibility_hearingaid_not_connected_summary" msgid="3371427366765435743">"ශ්‍රවණාධාරක සම්බන්ධ කර නැත"</string>
     <string name="accessibility_hearingaid_adding_summary" msgid="999051610528600783">"ශ්‍රවණාධාරක එක් කරන්න"</string>
-    <string name="accessibility_hearingaid_pair_instructions_message" msgid="8913409742121315657">"ඔබගේ ශ්‍රවණාධාරක යුගල කිරීමට, මීළඟ තිරයේ ඔබේ උපාංගය සොයා තට්ටු කරන්න. ඔබේ යුගල ප්‍රකාරයක ඇති බව සහතික කර ගන්න."</string>
+    <!-- no translation found for accessibility_hearingaid_pair_instructions_title (2357706801112207624) -->
+    <skip />
+    <!-- no translation found for accessibility_hearingaid_pair_instructions_message (581652489109350119) -->
+    <skip />
     <string name="accessibility_hearingaid_active_device_summary" msgid="509703438222873967">"<xliff:g id="DEVICE_NAME">%1$s</xliff:g> ක්‍රියාත්මකයි"</string>
+    <!-- no translation found for accessibility_hearingaid_left_side_device_summary (1907302799168261001) -->
+    <skip />
+    <!-- no translation found for accessibility_hearingaid_right_side_device_summary (148257064855054376) -->
+    <skip />
+    <!-- no translation found for accessibility_hearingaid_left_and_right_side_device_summary (4268221140368164452) -->
+    <skip />
+    <!-- no translation found for accessibility_hearingaid_more_device_summary (8092641784056942546) -->
+    <skip />
     <plurals name="show_number_hearingaid_count" formatted="false" msgid="776000580683647556">
       <item quantity="one">සුරැකි ශ්‍රවණාධාර <xliff:g id="NUMBER_DEVICE_COUNT_1">%1$d</xliff:g></item>
       <item quantity="other">සුරැකි ශ්‍රවණාධාර <xliff:g id="NUMBER_DEVICE_COUNT_1">%1$d</xliff:g></item>
@@ -3433,8 +3472,7 @@
     <string name="nfc_payment_set_default_instead_of" msgid="565237441045013280">"සම්බන්ධතාවක් නැති පර්යන්තයකදී, <xliff:g id="APP_0">%1$s</xliff:g> සමගින් ගෙවන්න.\n\nමෙය <xliff:g id="APP_1">%2$s</xliff:g> ඔබේ පෙරනිමි ගෙවීම් යෙදුම ලෙස ප්‍රතිස්ථාපනය කරයි."</string>
     <string name="nfc_payment_btn_text_set_deault" msgid="1821065137209590196">"පෙරනිමි ලෙස සකසන්න"</string>
     <string name="nfc_payment_btn_text_update" msgid="5159700960497443832">"යාවත්කාලීන කරන්න"</string>
-    <!-- no translation found for nfc_work_text (2496515165821504077) -->
-    <skip />
+    <string name="nfc_work_text" msgid="2496515165821504077">"කාර්යාලය"</string>
     <string name="restriction_settings_title" msgid="4293731103465972557">"සිමා"</string>
     <string name="restriction_menu_reset" msgid="92859464456364092">"සිමා ඉවත් කරන්න"</string>
     <string name="restriction_menu_change_pin" msgid="2505923323199003718">"PIN වෙනස් කරන්න"</string>
@@ -3606,7 +3644,8 @@
     <string name="keywords_sounds_and_notifications_interruptions" msgid="1500312884808362467">"බාධා නොකරන්න එපා, බාධා කිරීම, බාධාව, බිඳීම"</string>
     <string name="keywords_app" msgid="7983814237980258061">"RAM"</string>
     <string name="keywords_location" msgid="8016374808099706213">"අවට, ස්ථානය, ඉතිහාසය, වාර්තාකරණය, GPS"</string>
-    <string name="keywords_accounts" msgid="3482052586502133909">"ගිණුම, ගිණුමක් එක් කරන්න, කාර්යාල පැතිකඩ, ගිණුම එක් කරන්න"</string>
+    <!-- no translation found for keywords_accounts (3013897982630845506) -->
+    <skip />
     <string name="keywords_users" msgid="3497517660077620843">"සීමා කිරීම, සීමා කරන්න, සීමා කරන ලදී"</string>
     <string name="keywords_keyboard_and_ime" msgid="4741098648730042570">"පෙළ නිවැරදි කිරීම, නිවැරදි, ශබ්දය, කම්පනය, ස්වයං, භාෂාව, අභිනය, යෝජනා කිරීම, යෝජනාව, තේමාව, අහිතකර, වචනය, වර්ගය, ඉමොජි ජාත්‍යන්තර"</string>
     <string name="keywords_reset_apps" msgid="8254315757754930862">"නැවත සකසන්න, මනාප, පෙරනිමි"</string>
@@ -3709,6 +3748,12 @@
     <string name="boot_sounds_title" msgid="5033062848948884111">"ශබ්ද බල ගන්වන්න"</string>
     <string name="live_caption_title" msgid="8617086825712756983">"සජීවී සිරස්තලය"</string>
     <string name="live_caption_summary" msgid="2898451867595161809">"මාධ්‍ය ස්වයංක්‍රීයව සිරස්තල"</string>
+    <string name="spatial_audio_speaker" msgid="9145233652433523302">"දුරකථන ස්පීකරය"</string>
+    <string name="spatial_audio_wired_headphones" msgid="2237355789145828648">"රැහැන්ගත හෙඩ්ෆෝන්"</string>
+    <string name="spatial_audio_text" msgid="3273982964342449273">"අවකාශීය ශ්‍රව්‍ය ඔබ අවටින් එන බව පෙනෙන ගිලී යන ශබ්දය නිර්මාණය කරයි. සමහර මාධ්‍ය සමග පමණක් ක්‍රියා කරයි."</string>
+    <string name="spatial_summary_off" msgid="8272678804629774378">"ක්‍රියාවිරහිතයි"</string>
+    <string name="spatial_summary_on_one" msgid="6239933399496282994">"ක්‍රියාත්මකයි / <xliff:g id="OUTPUT_DEVICE">%1$s</xliff:g>"</string>
+    <string name="spatial_summary_on_two" msgid="4526919818832483883">"ක්‍රියාත්මකයි / <xliff:g id="OUTPUT_DEVICE_0">%1$s</xliff:g> සහ <xliff:g id="OUTPUT_DEVICE_1">%2$s</xliff:g>"</string>
     <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{කිසිත් නැත}=1{කාලසටහන් 1ක් සකසන ලදී}one{කාලසටහන් #ක් සකසන ලදී}other{කාලසටහන් #ක් සකසන ලදී}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"බාධා නොකරන්න"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"වැදගත් පුද්ගලයන් සහ යෙදුම් විසින් පමණක් දැනුම් දෙනු ලැබේ"</string>
@@ -4159,6 +4204,8 @@
     <string name="zen_mode_from_no_conversations" msgid="3924593219855567165">"කිසිවක් නැත"</string>
     <string name="zen_mode_conversations_count" msgid="3199310723073707153">"{count,plural, =0{කිසිත් නැත}=1{සංවාද 1}one{සංවාද #}other{සංවාද #}}"</string>
     <string name="zen_mode_people_calls_messages_section_title" msgid="6815202112413762206">"බාධා කළ හැකි අය"</string>
+    <!-- no translation found for zen_mode_people_footer (7710707353004137431) -->
+    <skip />
     <string name="zen_mode_calls_title" msgid="2078578043677037740">"ඇමතුම්"</string>
     <string name="zen_mode_calls" msgid="7653245854493631095">"ඇමතුම්"</string>
     <string name="zen_mode_calls_list" msgid="5044730950895749093">"ඇමතුම්"</string>
@@ -4829,8 +4876,6 @@
       <item quantity="other">යෙදුම් <xliff:g id="COUNT">%d</xliff:g>කට සීමා නොකළ දත්ත භාවිතා කළ හැක</item>
     </plurals>
     <string name="special_access_more" msgid="132919514147475846">"තවත් බලන්න"</string>
-    <string name="confirm_convert_to_fbe_warning" msgid="3783325656948378111">"සැබවින්ම පරිශීලක දත්ත මකා ගොනු සංකේතනයට පරිවර්තනය කරන්නද?"</string>
-    <string name="button_confirm_convert_fbe" msgid="339648921918438106">"මකා පරිවර්තනය කරන්න"</string>
     <string name="reset_shortcut_manager_throttling" msgid="2183940254903144298">"ShortcutManager අගය-සීමා කිරීම යළි සකසන්න"</string>
     <string name="reset_shortcut_manager_throttling_complete" msgid="8949943009096885470">"ShortcutManager අගය-සීමා කිරීම යළි සකසා ඇත"</string>
     <string name="notification_suggestion_title" msgid="6309263655965785411">"අගුලු තිරය මත පාලන තොරතුරු"</string>
@@ -5694,8 +5739,16 @@
     <string name="tare_initial_consumption_limit" msgid="2921646306374048384">"මූලික උපරිම පරිභෝජන සීමාව"</string>
     <string name="tare_hard_consumption_limit" msgid="7977885116447608016">"උපරිම පරිභෝජන සීමාව"</string>
     <string name="tare_modifiers" msgid="8919975635360280820">"සංස්කාරක"</string>
-    <string name="tare_actions" msgid="4573323466443513639">"ක්‍රියා"</string>
-    <string name="tare_rewards" msgid="602131401590928885">"පාරිතෝෂික"</string>
+    <!-- no translation found for tare_actions_ctp (5110104015354916401) -->
+    <skip />
+    <!-- no translation found for tare_actions_base_price (3300967942666376589) -->
+    <skip />
+    <!-- no translation found for tare_rewards_instantaneous (8358683519945340874) -->
+    <skip />
+    <!-- no translation found for tare_rewards_ongoing (8641416948811152109) -->
+    <skip />
+    <!-- no translation found for tare_rewards_max (5283055625642837010) -->
+    <skip />
     <string name="tare_top_activity" msgid="7266560655483385757">"ඉහළම ක්‍රියාකාරකම"</string>
     <string name="tare_notification_seen" msgid="7829963536020087742">"දැනුම්දීම දකින ලදි"</string>
     <string name="tare_notification_seen_15_min" msgid="832174185809497764">"දැනුම්දීම මිනිත්තු 15ක් ඇතුළත දකින ලදි"</string>
@@ -5736,9 +5789,12 @@
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"දැන් නැවත පණ ගන්වන්න"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"පසුව නැවත පණ ගන්වන්න"</string>
     <string name="bluetooth_details_spatial_audio_title" msgid="6183752635162309599">"අවකාශීය ශ්‍රව්‍ය"</string>
-    <string name="bluetooth_details_spatial_audio_summary" msgid="4125762902654875180">"ගිල්වුම් ශ්‍රව්‍යය ඔබ අවට සැම තැනකින්ම එන බව පෙනේ. සමහර මාධ්‍ය සමග පමණක් ක්‍රියා කරයි."</string>
-    <string name="bluetooth_details_head_tracking_title" msgid="8021583493584244700">"ශ්‍රව්‍යය වඩාත් යථාර්ථවාදී බවට පත් කරන්න"</string>
-    <string name="bluetooth_details_head_tracking_summary" msgid="2093665685644696866">"එය වඩාත් ස්වභාවික වන ලෙස ශ්‍රව්‍යයෙහි ස්ථානගත කිරීම මාරු කරන්න."</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (5026859623681482668) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (5416972521040337799) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (3942238746595985395) -->
+    <skip />
     <string name="ingress_rate_limit_title" msgid="2106694002836274350">"ජාල බාගැනීම් අනුපාත සීමාව"</string>
     <string name="ingress_rate_limit_summary" msgid="1097811019742438371">"අන්තර්ජාල සබැඳුම සපයන සියලු ජාල සඳහා යෙදෙන ජාල කලාප පළල ඇතුළු වීමේ අනුපාත සීමාව වින්‍යාස කරන්න."</string>
     <string name="ingress_rate_limit_dialog_title" msgid="5359461052422633789">"ජාල බාගැනීම් අනුපාත සීමාව වින්‍යාස කරන්න"</string>
